--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,16 @@
 <body>
 <div th:if="${name}">
     <p th:text="${name} + '님, 환영합니다.'"></p>
-    <p th:text="'당신의 권한은' + ${role} + '입니다.'"></p>
-    <a th:href="@{/logout}">로그아웃</a>
+    <p th:text="'당신의 권한은 ' + ${role} + '입니다.'"></p>
+    <form method="post" th:action="@{/logout}">
+        <input type="submit" value="로그아웃"/>
+    </form>
 </div>
 <div th:unless="${name}">
-    <a th:href="@{/oauth2/authorization/google(role=role)}">Google 계정으로 로그인</a>
+    <!--<a th:href="@{/oauth2/authorization/google}" role="user">Google 계정으로 로그인</a>-->
+    <!-- model.addAttribute("role", role); 를 사용했을 때 -->
+    <a th:href="@{/oauth2/authorization/google(role=user)}">일반 Google 계정으로 로그인</a>
+    <a th:href="@{/oauth2/authorization/google(role=admin)}">관리자 Google 계정으로 로그인</a>
 </div>
 </body>
 </html>
